@@ -22,6 +22,7 @@ Build 310, released 2025/03/16
 * Fixed a regression where `win32com.client.DispatchWithEvents` and win32com.client.WithEvents` would throw a `TypeError` on the second call (#2491, @Avasam)
 * Fixed regresion causing `win32com.shell.shell` to be missing a number of `IID`s. (#2487, @Avasam)
 * As part of the above, Windows 7 is now minimum supported.
+* Added missing quotes and closing parenthesis to `win32com.client.build.MapEntry`'s `repr` (#2572, @Avasam)
 
 Build 309, released 2025/03/09
 ------------------------------
